# sync

./: BUILD.md  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  all.bat  all.rs  bench.bat  build.rs  clippy.bat  lint.bat  lint.rs  test.bat
.github/workflows/: ci.yml  deploy.yaml  deploy.yml  deploy2.yaml  deploy3.yaml  deploy_linux.yaml  lint.yml  release.yml  unit-tests.yml
crates tests/: README.md  sort.rs
crates tests/ansi_term/: Cargo.toml
crates tests/ansi_term/src/: main.rs
crates tests/colored/: Cargo.toml
crates tests/colored/src/: main.rs
crates tests/console/: Cargo.toml
crates tests/console/src/: main.rs
crates tests/crossterm/: Cargo.toml
crates tests/crossterm/src/: main.rs
crates tests/term/: Cargo.toml
crates tests/term/src/: main.rs
crates tests/termcolor/: Cargo.toml
crates tests/termcolor/src/: main.rs
crates tests/yansi/: Cargo.toml
crates tests/yansi/src/: main.rs
download/: README.md  sync0.9.7-linux-i686.tar.xz  sync0.9.7-linux-x64.tar.xz  sync0.9.8-openbsd-x64.tgz  sync0.9.9-freebsd-x64.tgz  sync0.9.9-linux-i686.tar.xz  sync0.9.9-linux-x64.tar.xz  sync0.9.9-netbsd-x64.tgz  sync0.9.9-openbsd-x64.tgz  sync1.0.2-freebsd-x64.tgz  sync1.0.2-linux-i686.tgz  sync1.0.2-linux-x64.tgz  sync1.0.2-macos-aarch64.tgz  sync1.0.2-netbsd-x64.tgz  sync1.0.2-openbsd-x64.tgz  sync1.1.17-freebsd-x64.tgz  sync1.1.17-linux-x64.tgz  sync1.1.17-macos-x64.tgz  sync1.2.7-freebsd-x64.tgz  sync1.2.7-linux-x64.tgz  sync1.2.7-macos-x64.tgz  sync1.4.5-freebsd-x64.tgz  sync1.4.5-linux-x64.tgz  sync1.4.5-macos-x64.tgz
src/: aliases.rs  main.rs
src/processor/: check.rs  cli.rs  config.rs  consts.rs  copy.rs  create.rs  duplicate.rs  error.rs  hash.rs  join.rs  mod.rs  mv.rs  split.rs  splitjoin.rs  sync.rs  validate.rs
src/processor/i18n/: messages.rs  messages_BR.rs  messages_br.rs  mod.rs
tests/: integration_test.rs
tests/processor/: cli.rs  consts.rs  error.rs  mod.rs  splitjoin.rs  sync.rs
tests/processor/i18n/: messages.rs  messages_BR.rs
