[package]
authors          = ["Marcos Mazoti <mazoti@gmail.com>"]
description      = "A Backup tool to keep two folders synchronized with minimum modifications (fast and good for solid state disks and network drives)"
edition          = "2021"
license-file     = "License.md"
name             = "sync"
readme           = "Readme.md"
repository       = "https://github.com/mazoti/sync/"
version          = "1.4.6"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = false
panic            = "abort"
rpath            = false
strip            = "symbols"

[dependencies]
chrono    = {version = "0.4.20", optional = true}
sha256 = "1.1.1"

[features]
i18n = ["dep:chrono"]
colored=["i18n"]

br  = ["i18n"]
en  = ["i18n"]

copy = []
tree = []
check-mt=[]

# Required for Windows application icon only
[target.'cfg(windows)'.build-dependencies]
winres    = "0.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console"
]